--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div id="root"></div>
 
     <script>
-        if (window.location.pathname.endsWith('/') && window.location.pathname !== '/') {
+        if (window.location.pathname.endsWith("/") && window.location.pathname !== "/") {
             const noSlash = window.location.pathname.slice(0, -1);
             const newUrl = window.location.origin + noSlash + window.location.search + window.location.hash;
-            window.history.replaceState(null, '', newUrl);
+            window.history.replaceState(null, "", newUrl);
         }
     </script>
 
