--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/src/assets/navbar/pj-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="description"
+        content="Portfolio of Pavithr Jain - Web Developer specializing in MERN stack, modern UI/UX design, and interactive projects." />
+
     <title>Pavithr Jain</title>
 </head>
 
